--- a/public/register-user.html
+++ b/public/register-user.html
@@ -1,19 +1,31 @@
-<div class="bg-light  p-3 rounded">
-    <form>
-        <h3>Register User</h3>
-        <dl>
-            <dt>User Id</dt>
-            <dd><input type="text" id="UserId"></dd>
-            <dt>User Name</dt>
-            <dd><input type="text" id="UserName"></dd>
-            <dt>Password</dt> 
-            <dd><input type="password" id="Password"></dd>
-            <dt>Email</dt>
-            <dd><input type="email" id="Email"></dd>
-            <dt>Mobile</dt>
-            <dd><input type="text" id="Mobile"></dd>
-        </dl>
-        <button class="btn btn-warning" id="btnFrmRegister">Register</button>
-        <button class="btn btn-danger" id="btnCancel">Cancel</button>
-    </form>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-6 mt-5">
+            <h2 class="text-center">Register</h2>
+            <form>
+                <div class="mb-3">
+                    <label for="UserId" class="form-label">User ID</label>
+                    <input type="text" class="form-control" id="UserId" placeholder="Enter your user ID" required>
+                </div>
+                <div class="mb-3">
+                    <label for="UserName" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="UserName" placeholder="Enter your name" required>
+                </div>
+                <div class="mb-3">
+                    <label for="Email" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="Email" placeholder="Enter your email" required>
+                </div>
+                <div class="mb-3">
+                    <label for="Password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="Password" placeholder="Enter your password" required>
+                </div>
+                <div class="mb-3">
+                    <label for="Mobile" class="form-label">Mobile Number</label>
+                    <input type="text" class="form-control" id="Mobile" placeholder="Enter your mobile number" required>
+                </div>
+                <button class="btn btn-primary mt-3" id="btnFrmRegister">Register</button>
+                <button class="btn btn-secondary mt-3" id="btnCancel">Cancel</button>
+            </form>
+        </div>
+    </div>
 </div>
