--- a/public/signin-user.html
+++ b/public/signin-user.html
@@ -1,11 +1,19 @@
-<div class="bg-light p-3 rounded">
-   <h2>User Login</h2>
-   <dl>
-    <dt>User Id</dt>
-    <dd><input type="text" id="Login-UserId"></dd>
-    <dt>Password</dt> 
-    <dd><input type="password" id="Login-Password"></dd>
-   </dl>
-   <button id="btnLogin" class="btn btn-warning">Login</button>
-   <button id="btnCancel" class="btn btn-danger">Cancel</button>
+<div class="container">
+   <div class="row justify-content-center">
+       <div class="col-md-6 mt-5">
+           <h2 class="text-center mt-5">Sign In</h2>
+           <form id="loginForm">
+               <div class="mb-3">
+                   <label for="Login-UserId" class="form-label">User Id</label>
+                   <input type="text" class="form-control" id="Login-UserId" placeholder="Enter your User Id" required>
+               </div>
+               <div class="mb-3">
+                   <label for="Login-Password" class="form-label">Password</label>
+                   <input type="password" class="form-control" id="Login-Password" placeholder="Enter your password" required>
+               </div>
+               <button type="submit" id="btnLogin" class="btn btn-primary mt-3">Login</button>
+               <button type="button" id="btnCancel" class="btn btn-secondary mt-3">Cancel</button>
+           </form>
+       </div>
+   </div>
 </div>
